# ros2_fundamentals_nodes

./: .gitattributes  .gitignore  justfile  setup.sh  setup_workspace.bash
.devcontainer/: devcontainer.json
.docker/: Dockerfile
.env/: .global_gitignore  bash_aliases.bash  bash_commands.bash  setup_env.bash
.github/workflows/: docker-publisher.yml  publish_docker_image.yaml
.repos/: html-exact.repos  html.repos
.workspace_env/: .global_gitignore  bash_aliases.bash  bash_commands.bash  setup_env.bash  terminal_coloring.bash
.workspace_env/lib/: colors.bash  log.bash  preflight.bash
.workspace_env/lib/commands/: kill_background_task.bash  mkdircd.bash  ros2_helpers.bash  setup_workspace.bash  workspace_navigation.bash
.workspace_env/prompt/: prompt.bash
doc/: Readme.md  commands.txt
src/hand_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/hand_detector/config/: view_hand_detector.rviz
src/hand_detector/hand_detector/: hand_detector_node.py  webcam_node.py
src/hand_detector/launch/: hand_detection.launch.py  hand_detection.launch.xml  hand_detection.launch.yaml
src/hand_detector_interfaces/: CMakeLists.txt  package.xml
src/hand_detector_interfaces/msg/: EstimatedPalmCenters.msg  PalmCenter.msg
src/ping_pong/: package.xml  setup.py
src/ping_pong/config/: ping_pong_game.rviz  view_ping_pong_board.rviz
src/ping_pong/ping_pong/: ping_pong_game_node.py  ping_pong_game_rviz2_node.py
