<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hand_detector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="manuel.muth@rosiris.de">Manuel M.</maintainer>
  <license>Apache-2.0</license>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>python3-opencv</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>image_tools</exec_depend>
   
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
